@@ -3,15 +3,15 @@ package io.quarkus.resteasy.reactive.server.deployment;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.STRING;
 
 import java.lang.reflect.Modifier;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Predicate;
 
 import javax.ws.rs.core.MediaType;
 
+import org.jboss.jandex.AnnotationInstance;
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.ClassType;
 import org.jboss.jandex.DotName;
@@ -34,10 +34,12 @@ import io.quarkus.deployment.GeneratedClassGizmoAdaptor;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.builditem.BytecodeTransformerBuildItem;
 import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
+import io.quarkus.deployment.builditem.nativeimage.ReflectiveClassBuildItem;
 import io.quarkus.gizmo.ClassCreator;
 import io.quarkus.gizmo.MethodCreator;
 import io.quarkus.gizmo.MethodDescriptor;
 import io.quarkus.gizmo.ResultHandle;
+import io.quarkus.resteasy.reactive.server.runtime.ResteasyReactiveRecorder;
 import io.vertx.core.http.HttpServerRequest;
 import io.vertx.core.http.HttpServerResponse;
 import io.vertx.ext.web.RoutingContext;
@@ -47,18 +49,27 @@ public class QuarkusServerEndpointIndexer
     private final MethodCreator initConverters;
     private final BuildProducer<GeneratedClassBuildItem> generatedClassBuildItemBuildProducer;
     private final BuildProducer<BytecodeTransformerBuildItem> bytecodeTransformerBuildProducer;
+    private final BuildProducer<ReflectiveClassBuildItem> reflectiveClassProducer;
     private final DefaultProducesHandler defaultProducesHandler;
-    private static final Set<DotName> CONTEXT_TYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private final ResteasyReactiveRecorder resteasyReactiveRecorder;
+
+    private final Map<String, String> multipartGeneratedPopulators = new HashMap<>();
+    private final Predicate<String> applicationClassPredicate;
+
+    private static final Set<DotName> CONTEXT_TYPES = Set.of(
             DotName.createSimple(HttpServerRequest.class.getName()),
             DotName.createSimple(HttpServerResponse.class.getName()),
-            DotName.createSimple(RoutingContext.class.getName()))));
+            DotName.createSimple(RoutingContext.class.getName()));
 
     QuarkusServerEndpointIndexer(Builder builder) {
         super(builder);
         this.initConverters = builder.initConverters;
         this.generatedClassBuildItemBuildProducer = builder.generatedClassBuildItemBuildProducer;
         this.bytecodeTransformerBuildProducer = builder.bytecodeTransformerBuildProducer;
+        this.reflectiveClassProducer = builder.reflectiveClassProducer;
         this.defaultProducesHandler = builder.defaultProducesHandler;
+        this.applicationClassPredicate = builder.applicationClassPredicate;
+        this.resteasyReactiveRecorder = builder.resteasyReactiveRecorder;
     }
 
     protected boolean isContextType(ClassType klass) {
@@ -91,6 +102,14 @@ public class QuarkusServerEndpointIndexer
             return result;
         }
         return super.applyAdditionalDefaults(nonAsyncReturnType);
+    }
+
+    @Override
+    protected boolean handleCustomParameter(Map<DotName, AnnotationInstance> anns, ServerIndexedParameter builder,
+            Type paramType, boolean field, Map<String, Object> methodContext) {
+        methodContext.put(GeneratedClassBuildItem.class.getName(), generatedClassBuildItemBuildProducer);
+        methodContext.put(ResteasyReactiveRecorder.class.getName(), resteasyReactiveRecorder);
+        return super.handleCustomParameter(anns, builder, paramType, field, methodContext);
     }
 
     @Override
@@ -159,7 +178,9 @@ public class QuarkusServerEndpointIndexer
             }
             baseName = effectivePrefix + "$quarkusrestparamConverter$";
             try (ClassCreator classCreator = new ClassCreator(
-                    new GeneratedClassGizmoAdaptor(generatedClassBuildItemBuildProducer, true), baseName, null,
+                    new GeneratedClassGizmoAdaptor(generatedClassBuildItemBuildProducer,
+                            applicationClassPredicate.test(elementType)),
+                    baseName, null,
                     Object.class.getName(), ParameterConverter.class.getName())) {
                 MethodCreator mc = classCreator.getMethodCreator("convert", Object.class, Object.class);
                 if (stringCtor != null) {
@@ -200,12 +221,46 @@ public class QuarkusServerEndpointIndexer
                 initConverters.getMethodParam(0));
     }
 
+    protected void handleMultipart(ClassInfo multipartClassInfo) {
+        String className = multipartClassInfo.name().toString();
+        if (multipartGeneratedPopulators.containsKey(className)) {
+            // we've already seen this class before and have done all we need to make it work
+            return;
+        }
+        reflectiveClassProducer.produce(new ReflectiveClassBuildItem(false, false, className));
+        String populatorClassName = MultipartPopulatorGenerator.generate(multipartClassInfo,
+                new GeneratedClassGizmoAdaptor(generatedClassBuildItemBuildProducer, true), index);
+        multipartGeneratedPopulators.put(className, populatorClassName);
+
+        // transform the multipart pojo (and any super-classes) so we can access its fields no matter what
+        ClassInfo currentClassInHierarchy = multipartClassInfo;
+        while (true) {
+            bytecodeTransformerBuildProducer
+                    .produce(new BytecodeTransformerBuildItem(currentClassInHierarchy.name().toString(),
+                            new MultipartTransformer(populatorClassName)));
+
+            DotName superClassDotName = currentClassInHierarchy.superName();
+            if (superClassDotName.equals(DotNames.OBJECT_NAME)) {
+                break;
+            }
+            ClassInfo newCurrentClassInHierarchy = index.getClassByName(superClassDotName);
+            if (newCurrentClassInHierarchy == null) {
+                break;
+            }
+            currentClassInHierarchy = newCurrentClassInHierarchy;
+        }
+
+    }
+
     public static final class Builder extends AbstractBuilder<Builder> {
 
         private BuildProducer<GeneratedClassBuildItem> generatedClassBuildItemBuildProducer;
         private BuildProducer<BytecodeTransformerBuildItem> bytecodeTransformerBuildProducer;
+        private BuildProducer<ReflectiveClassBuildItem> reflectiveClassProducer;
+        private ResteasyReactiveRecorder resteasyReactiveRecorder;
         private MethodCreator initConverters;
         private DefaultProducesHandler defaultProducesHandler = DefaultProducesHandler.Noop.INSTANCE;
+        public Predicate<String> applicationClassPredicate;
 
         @Override
         public QuarkusServerEndpointIndexer build() {
@@ -228,8 +283,24 @@ public class QuarkusServerEndpointIndexer
             return this;
         }
 
+        public Builder setReflectiveClassProducer(
+                BuildProducer<ReflectiveClassBuildItem> reflectiveClassProducer) {
+            this.reflectiveClassProducer = reflectiveClassProducer;
+            return this;
+        }
+
+        public Builder setApplicationClassPredicate(Predicate<String> applicationClassPredicate) {
+            this.applicationClassPredicate = applicationClassPredicate;
+            return this;
+        }
+
         public Builder setInitConverters(MethodCreator initConverters) {
             this.initConverters = initConverters;
+            return this;
+        }
+
+        public Builder setResteasyReactiveRecorder(ResteasyReactiveRecorder resteasyReactiveRecorder) {
+            this.resteasyReactiveRecorder = resteasyReactiveRecorder;
             return this;
         }
 
