@@ -12,6 +12,7 @@ import java.nio.file.Path;
 import java.security.CodeSource;
 import java.security.ProtectionDomain;
 import java.security.cert.Certificate;
+import java.util.Objects;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
@@ -108,9 +109,14 @@ public class JarResource implements ClassLoadingResource {
                 if (realName.endsWith("/")) {
                     realName = realName.substring(0, realName.length() - 1);
                 }
-                URI jarUri = jarPath.toUri();
-                return new URL("jar", null, jarUri.getScheme() + ':' + jarUri.getPath() + "!/" + resource);
-            } catch (MalformedURLException e) {
+                final URI jarUri = jarPath.toUri();
+                // first create a URI which includes both the jar file path and the relative resource name
+                // and then invoke a toURL on it. The URI reconstruction allows for any encoding to be done
+                // for the "path" which includes the "realName"
+                final URL resUrl = new URI(jarUri.getScheme(), jarUri.getPath() + "!/" + realName, null).toURL();
+                // wrap it up into a "jar" protocol URL
+                return new URL("jar", null, resUrl.getProtocol() + ':' + resUrl.getPath());
+            } catch (MalformedURLException | URISyntaxException e) {
                 throw new RuntimeException(e);
             }
         } finally {
@@ -196,5 +202,20 @@ public class JarResource implements ClassLoadingResource {
         return "JarResource{" +
                 jarPath.getFileName() +
                 '}';
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o)
+            return true;
+        if (o == null || getClass() != o.getClass())
+            return false;
+        JarResource that = (JarResource) o;
+        return Objects.equals(manifestInfo, that.manifestInfo) && jarPath.equals(that.jarPath);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(manifestInfo, jarPath);
     }
 }
